# product-catalogue

./: README.md  docker-compose.yaml
backend/: .gitignore  Cargo.toml  catalogue.db  catalogue.db-shm  catalogue.db-wal  flake.nix  run.sh  shell.nix  test.sh
backend/migrations/: 20251119114822_schema.sql
backend/src/: handlers.rs  main.rs  models.rs
backend/src/handlers/: admin.rs  common.rs  mod.rs
frontend/: .env  .env.example  ADMIN_PANEL.md  BACKEND_INTEGRATION.md  BACKEND_STATUS.md  COMPLETE.md  MOCK_DATA.md  README.md  package-lock.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CartItem.tsx  FilterChips.tsx  ProductCard.tsx  ProtectedRoute.tsx  SearchBar.tsx  Sidebar.tsx
frontend/src/components/admin/: CategoryForm.tsx  ProductForm.tsx
frontend/src/context/: AdminContext.tsx  CartContext.tsx
frontend/src/data/: mockCategories.ts  mockProducts.ts
frontend/src/pages/: AllProductsView.tsx  CartView.tsx  CategoriesView.tsx  ProductDetailView.tsx  SearchView.tsx
frontend/src/pages/admin/: AdminDashboard.tsx  AdminLogin.tsx  CategoryManagement.tsx  ProductManagement.tsx
frontend/src/services/: api.ts  mockApi.ts
frontend/src/theme/: theme.ts
frontend/src/types/: index.ts
frontend/src/utils/: transformers.ts
