[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
base64 = "0.21"
rand = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.12.2"
redis = "0.32.7"
deadpool-redis = "0.22.0"
bcrypt = "0.17.1"
tower-http = { version = "0.6.8", features = ["trace"] }
